# Before-I-Rise

./: CMakeLists.txt  README.md
docs/: fa.md  gemm.md  hgemm.md  sgemm.md
docs/draw/: fa.excalidraw  ping-pong.excalidraw  spmv.excalidraw
docs/note/: attention.md  cute_layout.md  hopper.md
include/: before_i_rise.h
ncu/: sgemm_2d.ncu-rep  sgemm_final.ncu-rep  sgemm_vec4.ncu-rep
src/fa/: fa.cu  fa_tiling.cu
src/gemm/: gemm.cu  hopper_hgemm.cu
src/gemv/: gemv.cu
src/reduce/: reduce.cu
src/transpose/: transpose.cu
src/util/: quantizer.h  swizzler.h  util.h
test/: CMakeLists.txt  main.cpp
test/fa/: CMakeLists.txt  main.cpp  test.py
test/hgemm/: CMakeLists.txt
test/sgemm/: CMakeLists.txt  main.cpp
